--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"start:dev": "nodemon src/app",
+		"start:dev": "nodemon src/app -e js,hbs,css",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"hbs": "^4.2.0"
 	}
 }
